# pytalist

./: README.md  pyproject.toml
pytalist/: main.py  validate.py
samples/: sample_empty.csv
