[project]
name = "pytalist"
version = "0.1"
description = "CLI for data analysis"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.11"

authors = [
    { name = "Martin Ariza", email = "martin.ariza.camargo@gmail.com" }
]

keywords = ["python", "cli", "data", "analysis", "csv"]

[project.scripts]
pytalist = "pytalist.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["samples*"]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyi",
    "samples",
    ".github",
    ".gitignore",
    "README.md",
]